dsl/src/parser.js
// @generated by Peggy 5.1.0.
//
// https://peggyjs.org/



  const KEYWORDS = [
    "story", "trading", "source", "sources", "given", "when", "and",
    "except", "then", "with", "until", "or until", "taking", "sl",
    "unless", "or unless", "or except"
  ];

  // Source and Sources are one keyword, the plural reading naturally with a
  // list. Everything downstream sees "source".
  function normHead(name) {
    const n = name.toLowerCase();
    return n === "sources" ? "source" : n;
  }

  // A clause is a keyword and a predicate. The predicate is a line per entry:
  // the keyword's own line first, then any continuation under it. Nothing
  // distinguishes the first from the rest.
  function textLine(text, line) {
    return {
      text: text,
      line: line,
      opensWithKeyword: KEYWORDS.some(function (k) {
        return new RegExp("^" + k.replace(" ", "\\s+") + "\\b", "i").test(text);
      })
    };
  }

class peg$SyntaxError extends SyntaxError {
  constructor(message, expected, found, location) {
    super(message);
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";
  }

  format(sources) {
    let str = "Error: " + this.message;
    if (this.location) {
      let src = null;
      const st = sources.find(s => s.source === this.location.source);
      if (st) {
        src = st.text.split(/\r\n|\n|\r/g);
      }
      const s = this.location.start;
      const offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
        ? this.location.source.offset(s)
        : s;
      const loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
      if (src) {
        const e = this.location.end;
        const filler = "".padEnd(offset_s.line.toString().length, " ");
        const line = src[s.line - 1];
        const last = s.line === e.line ? e.column : line.length + 1;
        const hatLen = (last - s.column) || 1;
        str += "\n --> " + loc + "\n"
            + filler + " |\n"
            + offset_s.line + " | " + line + "\n"
            + filler + " | " + "".padEnd(s.column - 1, " ")
            + "".padEnd(hatLen, "^");
      } else {
        str += "\n at " + loc;
      }
    }
    return str;
  }

  static buildMessage(expected, found) {
    function hex(ch) {
      return ch.codePointAt(0).toString(16).toUpperCase();
    }

    const nonPrintable = Object.prototype.hasOwnProperty.call(RegExp.prototype, "unicode")
      ? new RegExp("[\\p{C}\\p{Mn}\\p{Mc}]", "gu")
      : null;
    function unicodeEscape(s) {
      if (nonPrintable) {
        return s.replace(nonPrintable,  ch => "\\u{" + hex(ch) + "}");
      }
      return s;
    }

    function literalEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    function classEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    const DESCRIBE_EXPECTATION_FNS = {
      literal(expectation) {
        return "\"" + literalEscape(expectation.text) + "\"";
      },

      class(expectation) {
        const escapedParts = expectation.parts.map(
          part => (Array.isArray(part)
            ? classEscape(part[0]) + "-" + classEscape(part[1])
            : classEscape(part))
        );

        return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]" + (expectation.unicode ? "u" : "");
      },

      any() {
        return "any character";
      },

      end() {
        return "end of input";
      },

      other(expectation) {
        return expectation.description;
      },
    };

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      const descriptions = expected.map(describeExpectation);
      descriptions.sort();

      if (descriptions.length > 0) {
        let j = 1;
        for (let i = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }
}

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  const peg$FAILED = {};
  const peg$source = options.grammarSource;

  const peg$startRuleFunctions = {
    Document: peg$parseDocument,
  };
  let peg$startRuleFunction = peg$parseDocument;

  const peg$c0 = "notes";
  const peg$c1 = ":";
  const peg$c2 = "story";
  const peg$c3 = "trading";
  const peg$c4 = "sources";
  const peg$c5 = "source";
  const peg$c6 = "given";
  const peg$c7 = "when";
  const peg$c8 = "and";
  const peg$c9 = "except";
  const peg$c10 = "or";
  const peg$c11 = "then";
  const peg$c12 = "with";
  const peg$c13 = "until";
  const peg$c14 = "taking";
  const peg$c15 = "sl";
  const peg$c16 = "unless";
  const peg$c17 = "#";
  const peg$c18 = "\r\n";
  const peg$c19 = "\n";
  const peg$c20 = " ";

  const peg$r0 = /^[^\r\n]/;

  const peg$e0 = peg$classExpectation(["\r", "\n"], true, false, false);
  const peg$e1 = peg$anyExpectation();
  const peg$e2 = peg$literalExpectation("notes", true);
  const peg$e3 = peg$literalExpectation(":", false);
  const peg$e4 = peg$literalExpectation("story", true);
  const peg$e5 = peg$literalExpectation("trading", true);
  const peg$e6 = peg$literalExpectation("sources", true);
  const peg$e7 = peg$literalExpectation("source", true);
  const peg$e8 = peg$literalExpectation("given", true);
  const peg$e9 = peg$literalExpectation("when", true);
  const peg$e10 = peg$literalExpectation("and", true);
  const peg$e11 = peg$literalExpectation("except", true);
  const peg$e12 = peg$literalExpectation("or", true);
  const peg$e13 = peg$literalExpectation("then", true);
  const peg$e14 = peg$literalExpectation("with", true);
  const peg$e15 = peg$literalExpectation("until", true);
  const peg$e16 = peg$literalExpectation("taking", true);
  const peg$e17 = peg$literalExpectation("sl", true);
  const peg$e18 = peg$literalExpectation("unless", true);
  const peg$e19 = peg$literalExpectation("#", false);
  const peg$e20 = peg$literalExpectation("\r\n", false);
  const peg$e21 = peg$literalExpectation("\n", false);
  const peg$e22 = peg$literalExpectation(" ", false);

  function peg$f0(clauses, notes) {
    return { clauses, notes };
  }
  function peg$f1(ind, kw, text, c) {    return textLine(c.text, c.line);  }
  function peg$f2(ind, kw, text, conts) {
    return {
      keyword: kw.name,
      raw: kw.raw,
      column: ind.length,
      predicate: [textLine(text === null ? "" : text.trim(), kw.line)].concat(conts)
    };
  }
  function peg$f3(ind, kw, text, c) {    return textLine(c.text, c.line);  }
  function peg$f4(ind, kw, text, conts) {
    return {
      keyword: kw.name,
      raw: kw.raw,
      column: ind.length,
      predicate: [textLine(text === null ? "" : text.trim(), kw.line)].concat(conts)
    };
  }
  function peg$f5(ind, text) {
    return { line: location().start.line, column: ind.length, text: text.trim() };
  }
  function peg$f6(ind, kw, rest) {
    return {
      column: ind.length,
      raw: kw,
      predicate: [textLine(rest.replace(/^\n/, ""), location().start.line)]
    };
  }
  function peg$f7(name) {    return name + ":";  }
  function peg$f8(name) {    return name;  }
  function peg$f9(name) {
    return { name: normHead(name), raw: name, line: location().start.line };
  }
  function peg$f10(name) {
    return {
      name: name.toLowerCase().replace(/\s+/g, " "),
      raw: name,
      line: location().start.line
    };
  }
  let peg$currPos = options.peg$currPos | 0;
  let peg$savedPos = peg$currPos;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = peg$currPos;
  let peg$maxFailExpected = options.peg$maxFailExpected || [];
  let peg$silentFails = options.peg$silentFails | 0;

  let peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos,
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$getUnicode(pos = peg$currPos) {
    const cp = input.codePointAt(pos);
    if (cp === undefined) {
      return "";
    }
    return String.fromCodePoint(cp);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text, ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase, unicode) {
    return { type: "class", parts, inverted, ignoreCase, unicode };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description };
  }

  function peg$computePosDetails(pos) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column,
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    const res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column,
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column,
      },
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseDocument() {
    let s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parseSkip();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parseSkip();
    }
    s2 = [];
    s3 = peg$parseClause();
    while (s3 !== peg$FAILED) {
      s2.push(s3);
      s3 = peg$parseClause();
    }
    s3 = peg$parseNotesSection();
    if (s3 === peg$FAILED) {
      s3 = null;
    }
    peg$savedPos = s0;
    s0 = peg$f0(s2, s3);

    return s0;
  }

  function peg$parseClause() {
    let s0;

    s0 = peg$parseHeadClause();
    if (s0 === peg$FAILED) {
      s0 = peg$parseBodyClause();
    }

    return s0;
  }

  function peg$parseHeadClause() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8;

    s0 = peg$currPos;
    s1 = peg$parseIndent();
    s2 = peg$parseHeadKeyword();
    if (s2 !== peg$FAILED) {
      s3 = peg$parseInlineText();
      if (s3 === peg$FAILED) {
        s3 = null;
      }
      s4 = peg$parseNL();
      if (s4 !== peg$FAILED) {
        s5 = [];
        s6 = peg$currPos;
        s7 = [];
        s8 = peg$parseSkip();
        while (s8 !== peg$FAILED) {
          s7.push(s8);
          s8 = peg$parseSkip();
        }
        s8 = peg$parseContLine();
        if (s8 !== peg$FAILED) {
          peg$savedPos = s6;
          s6 = peg$f1(s1, s2, s3, s8);
        } else {
          peg$currPos = s6;
          s6 = peg$FAILED;
        }
        while (s6 !== peg$FAILED) {
          s5.push(s6);
          s6 = peg$currPos;
          s7 = [];
          s8 = peg$parseSkip();
          while (s8 !== peg$FAILED) {
            s7.push(s8);
            s8 = peg$parseSkip();
          }
          s8 = peg$parseContLine();
          if (s8 !== peg$FAILED) {
            peg$savedPos = s6;
            s6 = peg$f1(s1, s2, s3, s8);
          } else {
            peg$currPos = s6;
            s6 = peg$FAILED;
          }
        }
        s6 = [];
        s7 = peg$parseSkip();
        while (s7 !== peg$FAILED) {
          s6.push(s7);
          s7 = peg$parseSkip();
        }
        peg$savedPos = s0;
        s0 = peg$f2(s1, s2, s3, s5);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseBodyClause() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8;

    s0 = peg$currPos;
    s1 = peg$parseIndent();
    s2 = peg$parseBodyKeyword();
    if (s2 !== peg$FAILED) {
      s3 = peg$parseInlineText();
      if (s3 === peg$FAILED) {
        s3 = null;
      }
      s4 = peg$parseNL();
      if (s4 !== peg$FAILED) {
        s5 = [];
        s6 = peg$currPos;
        s7 = [];
        s8 = peg$parseSkip();
        while (s8 !== peg$FAILED) {
          s7.push(s8);
          s8 = peg$parseSkip();
        }
        s8 = peg$parseContLine();
        if (s8 !== peg$FAILED) {
          peg$savedPos = s6;
          s6 = peg$f3(s1, s2, s3, s8);
        } else {
          peg$currPos = s6;
          s6 = peg$FAILED;
        }
        while (s6 !== peg$FAILED) {
          s5.push(s6);
          s6 = peg$currPos;
          s7 = [];
          s8 = peg$parseSkip();
          while (s8 !== peg$FAILED) {
            s7.push(s8);
            s8 = peg$parseSkip();
          }
          s8 = peg$parseContLine();
          if (s8 !== peg$FAILED) {
            peg$savedPos = s6;
            s6 = peg$f3(s1, s2, s3, s8);
          } else {
            peg$currPos = s6;
            s6 = peg$FAILED;
          }
        }
        s6 = [];
        s7 = peg$parseSkip();
        while (s7 !== peg$FAILED) {
          s6.push(s7);
          s7 = peg$parseSkip();
        }
        peg$savedPos = s0;
        s0 = peg$f4(s1, s2, s3, s5);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseContLine() {
    let s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = peg$parseContIndent();
    if (s1 !== peg$FAILED) {
      s2 = peg$currPos;
      s3 = [];
      s4 = input.charAt(peg$currPos);
      if (peg$r0.test(s4)) {
        peg$currPos++;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e0); }
      }
      if (s4 !== peg$FAILED) {
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = input.charAt(peg$currPos);
          if (peg$r0.test(s4)) {
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e0); }
          }
        }
      } else {
        s3 = peg$FAILED;
      }
      if (s3 !== peg$FAILED) {
        s2 = input.substring(s2, peg$currPos);
      } else {
        s2 = s3;
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parseNL();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f5(s1, s2);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseNotesSection() {
    let s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parseIndent();
    s2 = peg$parseNotesKeyword();
    if (s2 !== peg$FAILED) {
      s3 = peg$currPos;
      s4 = [];
      if (input.length > peg$currPos) {
        s5 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s5 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e1); }
      }
      while (s5 !== peg$FAILED) {
        s4.push(s5);
        if (input.length > peg$currPos) {
          s5 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e1); }
        }
      }
      s3 = input.substring(s3, peg$currPos);
      peg$savedPos = s0;
      s0 = peg$f6(s1, s2, s3);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseNotesKeyword() {
    let s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = input.substr(peg$currPos, 5);
    if (s1.toLowerCase() === peg$c0) {
      peg$currPos += (5);
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e2); }
    }
    if (s1 !== peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 58) {
        s2 = peg$c1;
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e3); }
      }
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = peg$parseSP();
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$parseSP();
        }
        peg$savedPos = s0;
        s0 = peg$f7(s1);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = input.substr(peg$currPos, 5);
      if (s1.toLowerCase() === peg$c0) {
        peg$currPos += (5);
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e2); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseKeywordSep();
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f8(s1);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    }

    return s0;
  }

  function peg$parseHeadKeyword() {
    let s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$currPos;
    s2 = input.substr(peg$currPos, 5);
    if (s2.toLowerCase() === peg$c2) {
      peg$currPos += (5);
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e4); }
    }
    if (s2 === peg$FAILED) {
      s2 = input.substr(peg$currPos, 7);
      if (s2.toLowerCase() === peg$c3) {
        peg$currPos += (7);
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e5); }
      }
      if (s2 === peg$FAILED) {
        s2 = input.substr(peg$currPos, 7);
        if (s2.toLowerCase() === peg$c4) {
          peg$currPos += (7);
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e6); }
        }
        if (s2 === peg$FAILED) {
          s2 = input.substr(peg$currPos, 6);
          if (s2.toLowerCase() === peg$c5) {
            peg$currPos += (6);
          } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e7); }
          }
        }
      }
    }
    if (s2 !== peg$FAILED) {
      s1 = input.substring(s1, peg$currPos);
    } else {
      s1 = s2;
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseKeywordSep();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f9(s1);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseBodyKeyword() {
    let s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parseBodyKeywordWord();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseKeywordSep();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f10(s1);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseBodyKeywordWord() {
    let s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = input.substr(peg$currPos, 5);
    if (s1.toLowerCase() === peg$c6) {
      peg$currPos += (5);
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e8); }
    }
    if (s1 === peg$FAILED) {
      s1 = input.substr(peg$currPos, 4);
      if (s1.toLowerCase() === peg$c7) {
        peg$currPos += (4);
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e9); }
      }
      if (s1 === peg$FAILED) {
        s1 = input.substr(peg$currPos, 3);
        if (s1.toLowerCase() === peg$c8) {
          peg$currPos += (3);
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e10); }
        }
        if (s1 === peg$FAILED) {
          s1 = input.substr(peg$currPos, 6);
          if (s1.toLowerCase() === peg$c9) {
            peg$currPos += (6);
          } else {
            s1 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e11); }
          }
          if (s1 === peg$FAILED) {
            s1 = peg$currPos;
            s2 = input.substr(peg$currPos, 2);
            if (s2.toLowerCase() === peg$c10) {
              peg$currPos += (2);
            } else {
              s2 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e12); }
            }
            if (s2 !== peg$FAILED) {
              s3 = [];
              s4 = peg$parseSP();
              if (s4 !== peg$FAILED) {
                while (s4 !== peg$FAILED) {
                  s3.push(s4);
                  s4 = peg$parseSP();
                }
              } else {
                s3 = peg$FAILED;
              }
              if (s3 !== peg$FAILED) {
                s4 = input.substr(peg$currPos, 6);
                if (s4.toLowerCase() === peg$c9) {
                  peg$currPos += (6);
                } else {
                  s4 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$e11); }
                }
                if (s4 !== peg$FAILED) {
                  s2 = [s2, s3, s4];
                  s1 = s2;
                } else {
                  peg$currPos = s1;
                  s1 = peg$FAILED;
                }
              } else {
                peg$currPos = s1;
                s1 = peg$FAILED;
              }
            } else {
              peg$currPos = s1;
              s1 = peg$FAILED;
            }
            if (s1 === peg$FAILED) {
              s1 = input.substr(peg$currPos, 4);
              if (s1.toLowerCase() === peg$c11) {
                peg$currPos += (4);
              } else {
                s1 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$e13); }
              }
              if (s1 === peg$FAILED) {
                s1 = input.substr(peg$currPos, 4);
                if (s1.toLowerCase() === peg$c12) {
                  peg$currPos += (4);
                } else {
                  s1 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$e14); }
                }
                if (s1 === peg$FAILED) {
                  s1 = input.substr(peg$currPos, 5);
                  if (s1.toLowerCase() === peg$c13) {
                    peg$currPos += (5);
                  } else {
                    s1 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$e15); }
                  }
                  if (s1 === peg$FAILED) {
                    s1 = peg$currPos;
                    s2 = input.substr(peg$currPos, 2);
                    if (s2.toLowerCase() === peg$c10) {
                      peg$currPos += (2);
                    } else {
                      s2 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$e12); }
                    }
                    if (s2 !== peg$FAILED) {
                      s3 = [];
                      s4 = peg$parseSP();
                      if (s4 !== peg$FAILED) {
                        while (s4 !== peg$FAILED) {
                          s3.push(s4);
                          s4 = peg$parseSP();
                        }
                      } else {
                        s3 = peg$FAILED;
                      }
                      if (s3 !== peg$FAILED) {
                        s4 = input.substr(peg$currPos, 5);
                        if (s4.toLowerCase() === peg$c13) {
                          peg$currPos += (5);
                        } else {
                          s4 = peg$FAILED;
                          if (peg$silentFails === 0) { peg$fail(peg$e15); }
                        }
                        if (s4 !== peg$FAILED) {
                          s2 = [s2, s3, s4];
                          s1 = s2;
                        } else {
                          peg$currPos = s1;
                          s1 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s1;
                        s1 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s1;
                      s1 = peg$FAILED;
                    }
                    if (s1 === peg$FAILED) {
                      s1 = input.substr(peg$currPos, 6);
                      if (s1.toLowerCase() === peg$c14) {
                        peg$currPos += (6);
                      } else {
                        s1 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$e16); }
                      }
                      if (s1 === peg$FAILED) {
                        s1 = input.substr(peg$currPos, 2);
                        if (s1.toLowerCase() === peg$c15) {
                          peg$currPos += (2);
                        } else {
                          s1 = peg$FAILED;
                          if (peg$silentFails === 0) { peg$fail(peg$e17); }
                        }
                        if (s1 === peg$FAILED) {
                          s1 = input.substr(peg$currPos, 6);
                          if (s1.toLowerCase() === peg$c16) {
                            peg$currPos += (6);
                          } else {
                            s1 = peg$FAILED;
                            if (peg$silentFails === 0) { peg$fail(peg$e18); }
                          }
                          if (s1 === peg$FAILED) {
                            s1 = peg$currPos;
                            s2 = input.substr(peg$currPos, 2);
                            if (s2.toLowerCase() === peg$c10) {
                              peg$currPos += (2);
                            } else {
                              s2 = peg$FAILED;
